# readmit-stgnn

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  xgboost.ipynb
.github/: copilot-instructions.md
results/: test_metrics_summary.csv
scripts/: collect_test_metrics.py
slurm/: get_mimic_cohort.sbatch  preprocess_ehr.sbatch  setup_cuda_venv.sh  train_ehr_lstm.sbatch  train_ehr_rnn.sbatch  train_ehr_stgnn.sbatch
stgnn/: args.py  cuda_check.py  get_mimic_cohort.py  preprocess_ehr.py  train.py  utils.py
stgnn/data/: dataset.py
stgnn/model/: simple_lstm.py  simple_rnn.py
